generated-tests/tests/snapshots/rust/test_generated_parenthesized_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
(a3 + b3)

AST:
(source_file
  (ERROR
    (parenthesized_expression
      (binary_expression
        (identifier a3)
        (identifier b3)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "a3",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 2,
                end_line: 1,
                end_column: 4,
            },
        },
        Usage {
            name: "b3",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 9,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
