generated-tests/tests/snapshots/rust/test_generated_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
Some(x)

AST:
(source_file
  (ERROR
    (call_expression
      function: (identifier "Some")
      arguments: (arguments
        (identifier "x")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "Some(x)",
            kind: CallExpression,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 8,
            },
        },
        Usage {
            name: "Some",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 5,
            },
        },
        Usage {
            name: "x",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
