generated-tests/tests/snapshots/rust/test_generated_primitive_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var10: i32 = 42;

AST:
(source_file
  (let_declaration
    (identifier var10)
    (primitive_type)
    (integer_literal)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "var10",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "var10",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 5,
            end_line: 1,
            end_column: 10,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
