generated-tests/tests/snapshots/rust/test_generated_range_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
match val2 { 0..=10 => {}, _ => {} }

AST:
(source_file
  (expression_statement
    (match_expression
      (identifier val2)
      (match_block
        (match_arm
          (match_pattern
            (range_pattern
              (integer_literal)
              (integer_literal)
            )
          )
          (block)
        )
        (match_arm
          (match_pattern)
          (block)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "val2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 11,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
