generated-tests/tests/snapshots/rust/test_generated_ref_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let ref x11 = value3;

AST:
(source_file
  (let_declaration
    pattern: (ref_pattern
      (identifier "x11")
    )
    value: (identifier "value3")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x11",
            position: Position {
                start_line: 1,
                start_column: 9,
                end_line: 1,
                end_column: 12,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "value3",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 15,
                end_line: 1,
                end_column: 21,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
