generated-tests/tests/snapshots/rust/test_generated_reference_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
&value4

AST:
(source_file
  (ERROR
    (reference_expression
      (identifier value4)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "value4",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 2,
            end_line: 1,
            end_column: 8,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
